<resources>
    <string name="app_name">小王牛筋</string>
    <string name="title_home">扫码</string>
    <string name="title_dashboard">我的</string>
    <string name="password">密码</string>
    <string name="phone_no">手机号码</string>
    <string name="login">登录</string>
    <string name="hint_phone_no">请输入您的手机号码</string>
    <string name="hint_password">请输入您的密码</string>
    <string name="my_role_key">角色</string>
    <string name="my_phone_key">手机号码</string>
    <string name="my_name_key">姓名</string>
    <string name="my_loginout">登出</string>
</resources>